<resources>
    <string name="app_name">POSDemo</string>
    <string name="app_title">POSDemo</string>
    <string name="flag_prn">Printer</string>
    <string name="flag_lcd">LCD</string>
    <string name="flag_drawer">Drawer</string>
    <string name="flag_uart">Serialport</string>
    <string name="flag_magcard">Magcard</string>


    <string name="tab_lang">Language</string>
    <string name="tab_printer">Printer</string>
    <string name="tab_magcard">Magcard</string>
    <string name="tab_serialport">Serialport</string>
    <string name="tab_scale">Scale</string>
    <string name="tab_drawer">Drawer</string>
    <string name="tab_lcd">LCD</string>
    <string name="tab_power">Power</string>
    <string name="tab_scanner">Scanner</string>
    <string name="tab_finger">Finger</string>
    <string name="tab_sn">SN</string>
    <string name="operate">Operate</string>

    <string name="prn_open">Open</string>
    <string name="prn_close">Close</string>
    <string name="prn_printbmp">Bmp</string>
    <string name="prn_printesc">ESC</string>
    <string name="prn_printbarcode">Barcode</string>
    <string name="prn_select">Select File</string>
    <string name="prn_feed">Feed</string>
    <string name="prn_status">Status:</string>
    <string name="prn_nopaper">Paper not exist</string>
    <string name="prn_havepaper">Paper exist</string>
    <string name="prn_opt">Operate</string>

    <string name="mag_open">Open</string>
    <string name="mag_close">Close</string>
    <string name="mag_read_start">StartRead</string>
    <string name="read_stop">Stop</string>
    <string name="mag_track1">Track1:</string>
    <string name="mag_track2">Track2:</string>
    <string name="mag_track3">Track3:</string>

    <string name="uart_open">Open</string>
    <string name="uart_close">Close</string>
    <string name="uart_read">StartRead</string>
    <string name="txt_write">Write</string>
    <string name="uart_hex">Hex</string>
    <string name="txt_read_record">Read Record</string>

    <string name="cap_label">CapOpen</string>
    <string name="txt_read">Read</string>
    <string name="cap_clear">Clear</string>
    <string name="cap_read_rtc">RTC</string>
    <string name="cap_set_rtc">Set</string>

    <string name="finger_open">Open</string>
    <string name="finger_close">Close</string>
    <string name="finger_empty">Empty</string>
    <string name="finger_cancel">Cancel</string>
    <string name="finger_sleep">Sleep</string>
    <string name="finger_enroll">Enroll</string>
    <string name="finger_identify">Identify</string>
    <string name="finger_id">ID:</string>
    <string name="finger_cnt">CNT:</string>
    <string name="finger_led">LED:</string>
    <string name="finger_process">Process:</string>
    <string name="finger_delchar">DelChar</string>
    <string name="finger_readnum">ReadNum</string>

    <string name="scale_start">Strart</string>
    <string name="scale_close">Close</string>
    <string name="scale_zero">Zero</string>
    <string name="scale_data">Weight:</string>
    <string name="scale_unlock">UnLock</string>
    <string name="scale_lock">Lock</string>
    <string name="scale_study_zero">StudyZero</string>
    <string name="scale_study_full">StudyFull</string>

    <string name="lcd_open">Open</string>
    <string name="lcd_close">Close</string>
    <string name="lcd_clear">Clear</string>
    <string name="lcd_char">Text</string>
    <string name="lcd_pic">Pic</string>
    <string name="lcd_light">Light</string>
    <string name="lcd_off">Off</string>
    <string name="lcd_contrast">Contrast</string>


    <string name="drawer_open">Open</string>
    <string name="drawer_close">Close</string>
    <string name="drawer_do">Action</string>


    <string name="power_value">Voltage</string>
    <string name="power_read">ReadPower</string>

    <string name="play">Play</string>
    <string name="rebootDev">Dev</string>
    <string name="rebootHub">Hub</string>
    <string name="viron">VirOn</string>
    <string name="viroff">VirOff</string>

    <string-array name="lcd_Type">
        <item>9VFD</item>
        <item>32X144</item>
        <item>65X132</item>
        <item>24X128</item>
        <item>32X240</item>
        <item>32X144_COG</item>
        <item>NONE</item>
    </string-array>
    <string-array name="device_Type">
        <item>AOBX</item>
        <item>AO4X</item>
        <item>AO5</item>
        <item>AOW</item>
        <item>AOA</item>
        <item>AOW3066</item>
        <item>UNKNOWN</item>
    </string-array>
    <string-array name="printer_Type">
        <item>2inch</item>
        <item>3inch</item>
    </string-array>
    <string-array name="printer_thirdpara">
        <item>NONE</item>
        <item>A8A9</item>
        <item>M3</item>
    </string-array>
    <string-array name="printer_virtual">
        <item>Open</item>
        <item>Close</item>
    </string-array>
    <string-array name="finger_param">
        <item>0</item>
        <item>1</item>
    </string-array>
    <string-array name="uart_baudrate">
        <item>110</item>
        <item>300</item>
        <item>600</item>
        <item>1200</item>
        <item>2400</item>
        <item>4800</item>
        <item>9600</item>
        <item>19200</item>
        <item>38400</item>
        <item>57600</item>
        <item>115200</item>
        <item>230400</item>
        <item>460800</item>
        <item>500000</item>
        <item>576000</item>
        <item>921600</item>
        <item>1000000</item>
        <item>1152000</item>
        <item>1500000</item>
    </string-array>
    <string-array name="uart_stop">
        <item>1Stopb</item>
        <item>2Stopb</item>
    </string-array>
    <string-array name="uart_size">
        <item>CS5</item>
        <item>CS6</item>
        <item>CS7</item>
        <item>CS8</item>
    </string-array>
    <string-array name="uart_parity">
        <item>None</item>
        <item>Odd</item>
        <item>Even</item>
        <item>Mark</item>
        <item>Space</item>
    </string-array>
    <string-array name="finger_cmd">
        <item>EF 01 FF FF FF FF 01 00 08 31 00 01 04 05 00 00 44</item>
        <item>EF 01 FF FF FF FF 01 00 08 31 00 02 04 05 00 00 45</item>
        <item>EF 01 FF FF FF FF 01 00 08 32 00 00 01 05 00 00 41</item>
        <item>EF 01 FF FF FF FF 01 00 08 32 00 FF FF 05 00 02 3E</item>
        <item>EF 01 FF FF FF FF 01 00 03 0D 00 11</item>
        <item>EF 01 FF FF FF FF 01 00 03 30 00 34</item>
        <item>EF 01 FF FF FF FF 01 00 03 1D 00 21</item>
        <item>EF 01 FF FF FF FF 01 00 03 0F 00 13</item>
        <item>EF 01 FF FF FF FF 01 00 03 37 00 3B</item>
        <item>EF 01 FF FF FF FF 01 00 03 0A 00 0E</item>
    </string-array>

    <string-array name="sys_lang">
        <item>zh_CN</item>
        <item>zh_TW</item>
        <item>en_US</item>
    </string-array>
    <string-array name="lcd_size">
        <item>12</item>
        <item>13</item>
        <item>14</item>
        <item>15</item>
        <item>16</item>
        <item>17</item>
        <item>18</item>
        <item>19</item>
        <item>20</item>
    </string-array>
</resources>
