<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".activitys.ActivityMagcard">

    <include layout="@layout/title_view_common"/>
    <LinearLayout
        android:id="@+id/layout_mag"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_weight="1">
            <Button
                android:layout_width="match_parent"
                android:layout_height="@dimen/btn_height_large"
                android:textSize="@dimen/text_size_large_x"
                android:id="@+id/mag_btn_open"
                android:text="@string/mag_open"
                android:onClick="onClick"
                android:layout_weight="1"/>
            <Button
                android:layout_width="match_parent"
                android:layout_height="@dimen/btn_height_large"
                android:textSize="@dimen/text_size_large_x"
                android:id="@+id/mag_btn_close"
                android:text="@string/mag_close"
                android:onClick="onClick"
                android:layout_weight="1"/>

            <Button
                android:layout_width="match_parent"
                android:layout_height="@dimen/btn_height_large"
                android:textSize="@dimen/text_size_large_x"
                android:id="@+id/mag_btn_read"
                android:text="@string/mag_read_start"
                android:onClick="onClick"
                android:layout_weight="1"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_weight="3">

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:textSize="@dimen/text_size_large"
                android:id="@+id/mag_tv_track1"
                android:text="@string/mag_track1"
                android:gravity="left|center_vertical"
                android:layout_weight="1"/>
            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:textSize="@dimen/text_size_large"
                android:id="@+id/mag_tv_track2"
                android:text="@string/mag_track2"
                android:gravity="left|center_vertical"
                android:layout_weight="1"/>
            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:textSize="@dimen/text_size_large"
                android:id="@+id/mag_tv_track3"
                android:text="@string/mag_track3"
                android:gravity="left|center_vertical"
                android:layout_weight="1"/>
        </LinearLayout>

    </LinearLayout>
</LinearLayout>