<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".activitys.ActivityLcd">

    <include layout="@layout/title_view_common"/>
    <LinearLayout
        android:id="@+id/layout_lcd"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Spinner
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:id="@+id/lcd_sp_type"
                android:entries="@array/lcd_Type"
                android:layout_weight="1"></Spinner>
            <Button
                android:layout_width="wrap_content"
                android:layout_height="@dimen/btn_height_large"
                android:textSize="@dimen/text_size_large_x"
                android:id="@+id/lcd_btn_open"
                android:text="@string/lcd_open"
                android:onClick="onClick"
                android:layout_weight="1"/>

            <Button
                android:layout_width="wrap_content"
                android:layout_height="@dimen/btn_height_large"
                android:textSize="@dimen/text_size_large_x"
                android:id="@+id/lcd_btn_close"
                android:text="@string/lcd_close"
                android:onClick="onClick"
                android:layout_weight="1"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <Spinner
                android:id="@+id/lcd_sp_size"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:entries="@array/lcd_size"
                android:layout_weight="1">
            </Spinner>

            <EditText
                android:id="@+id/lcd_et_text"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text=""
                android:layout_weight="3"/>

        </LinearLayout>
        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <Button
                android:layout_width="wrap_content"
                android:layout_height="@dimen/btn_height_large"
                android:textSize="@dimen/text_size_large_x"
                android:id="@+id/lcd_btn_clear"
                android:text="@string/lcd_clear"
                android:onClick="onClick"
                android:layout_weight="1"/>
            <Button
                android:layout_width="wrap_content"
                android:layout_height="@dimen/btn_height_large"
                android:textSize="@dimen/text_size_large_x"
                android:id="@+id/lcd_btn_light"
                android:text="@string/lcd_light"
                android:onClick="onClick"
                android:layout_weight="1"/>
            <Button
                android:layout_width="wrap_content"
                android:layout_height="@dimen/btn_height_large"
                android:textSize="@dimen/text_size_large_x"
                android:id="@+id/lcd_btn_contrast"
                android:text="@string/lcd_contrast"
                android:onClick="onClick"
                android:layout_weight="1"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <Button
                android:layout_width="wrap_content"
                android:layout_height="@dimen/btn_height_large"
                android:textSize="@dimen/text_size_large_x"
                android:id="@+id/lcd_btn_char"
                android:text="@string/lcd_char"
                android:onClick="onClick"
                android:layout_weight="1"/>
            <Button
                android:layout_width="wrap_content"
                android:layout_height="@dimen/btn_height_large"
                android:textSize="@dimen/text_size_large_x"
                android:id="@+id/lcd_btn_pic"
                android:text="@string/lcd_pic"
                android:onClick="onClick"
                android:layout_weight="1"/>
        </LinearLayout>
    </LinearLayout>
</LinearLayout>