<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".activitys.ActivitySerialPort">
    <include layout="@layout/title_view_common"/>

    <LinearLayout
        android:layout_marginTop="@dimen/margin_normal"
        android:id="@+id/layout_uart"
        android:layout_width="fill_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_weight="1">

            <Button
                android:layout_marginBottom="@dimen/text_size_small"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:textSize="@dimen/text_size_large"
                android:id="@+id/uart_btn_open"
                android:text="@string/uart_open"
                android:onClick="onClick"
                android:layout_weight="1"/>
            <Button
                android:layout_marginBottom="@dimen/text_size_small"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:textSize="@dimen/text_size_large"
                android:id="@+id/uart_btn_close"
                android:text="@string/uart_close"
                android:onClick="onClick"
                android:layout_weight="1"/>
            <Button
                android:layout_marginBottom="@dimen/text_size_small"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:textSize="@dimen/text_size_large"
                android:id="@+id/uart_btn_write"
                android:text="@string/txt_write"
                android:onClick="onClick"
                android:layout_weight="1"/>
            <Button
                android:layout_marginBottom="@dimen/text_size_small"
                android:layout_width="match_parent"
                android:textSize="@dimen/text_size_large"
                android:layout_height="0dp"
                android:id="@+id/uart_btn_read"
                android:text="@string/uart_read"
                android:onClick="onClick"
                android:layout_weight="1"/>
            <CheckBox
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:id="@+id/uart_cb_hex"
                android:layout_weight="1"
                android:text="@string/uart_hex"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:orientation="vertical"
            android:layout_margin="0dp"
            android:layout_weight="4">

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="0dp"
                android:orientation="horizontal"
                android:layout_margin="0dp"
                android:layout_weight="1">
                <Spinner
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:id="@+id/uart_sp_path"
                    android:layout_weight="2"></Spinner>
                <Spinner
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:id="@+id/uart_sp_baudrate"
                    android:entries="@array/uart_baudrate"
                    android:layout_weight="1"></Spinner>

            </LinearLayout>
            <ScrollView
                android:layout_width="match_parent"
                android:layout_weight="4"
                android:layout_height="0dp"
                android:background="#0877A6"
                android:scrollbars="vertical">
                <TextView
                    android:layout_margin="3dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/uart_tv_read"
                    android:gravity="left|top"
                    android:text="Read Data"/>
            </ScrollView>
            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="0dp"
                android:orientation="horizontal"
                android:layout_margin="0dp"
                android:layout_weight="1">
                <EditText
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:id="@+id/uart_et_write"
                    android:gravity="left|center_vertical"
                    android:layout_weight="1"
                    android:text=""/>
                <Spinner
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:id="@+id/uart_sp_cmd"
                    android:entries="@array/finger_cmd"
                    android:layout_weight="1"></Spinner>
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
</LinearLayout>